Terminei a API dos VCs e com isto a API pública está pronta!
